# OCR-Models

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_example.py
examples/: basic_usage.py  batch_processing.py  model_comparison.py
src/deepseek_ocr/: __init__.py  base.py  factory.py
src/deepseek_ocr/cli/: __init__.py  main.py
src/deepseek_ocr/models/: __init__.py  deepseek.py  granite.py  smoldocling.py
src/deepseek_ocr/output/: __init__.py  formatters.py  types.py
tests/: __init__.py  test_base.py  test_factory.py  test_output.py
